@@ -12,6 +12,8 @@
              create_at_logtime option in combination with 
              recreate_check_signal:
              https://github.com/mschilli/log4perl/pull/28
+   *    (ms) Fixed additivity() modifications after init():
+             https://github.com/mschilli/log4perl/issues/29
 
 1.41 (2013/04/21)
    *    (ms) [rt 81731] Added 'trace' level to Log4perl::Catalyst, as
